google image search works with preview

--- a/public/memegen.html
+++ b/public/memegen.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<form action="/memegen", method="post">
-		Enter image url: <input type="url" name="url"><br>
+<!-- 		Enter image url: <input type="url" name="url"><br> -->
 		Enter text: <input type="text" name="text"><br>
 		<input type="submit" name="submit">
 	</form>
