--- a/public/memegen.html
+++ b/public/memegen.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="app">
 <head>
 	<meta charset="UTF-8">
 	<title>Generate meme</title>
   <link rel="stylesheet" href="/css/main.css">
+
+	<script src="https://code.angularjs.org/1.5.5/angular.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/creating.js"></script>
 </head>
-<body>
+<body ng-controller="Creating as create">
 	<div class="form-wrapper">
 		<h3>Let's Get Started</h3>
-		<form class="glow" action="/memegen", method="post">
-	<!-- 		Enter image url: <input type="url" name="url"><br> -->
-			<input class="glow" type="text" placeholder="Enter Your Text" name="text">
+		<form class="glow"  ng-submit="create.getImages()">
+			<input class="glow" type="text" placeholder="Enter Your Text" name="text" ng-model="create.search">
 			<input type="submit" name="submit">
 		</form>
 	</div>
+	<div class="preview-wrapper" ng-if="create.canPreview">
+		<img class="photo-overlay" ng-src="{{create.returnedImages[create.curr].full}}">
+		<img class="text-image" ng-src="{{create.transImg}}">
+	</div>
+	<div class="gallery-wrapper">
+		<form class="radio-gallery">
+			<div ng-repeat="(index, image) in create.returnedImages">
+				<input type="radio" name="gallery" value="{{index}}" id="thumb-{{index}}" ng-model="create.curr">
+				<label for="thumb-{{index}}"><img ng-src="{{image.thumb}}" class="gallery-item"></label>
+				<!-- <img  ng-src="{{image.thumb}}"> -->
+			</div>
+		</form>
+	</div>
+
 </body>
 </html>
