--- a/public/memegen.html
+++ b/public/memegen.html
@@ -13,7 +13,7 @@
 	<div class="form-wrapper">
 		<h3>Share Your Secrets</h3>
 		<form class="glow"  ng-submit="create.getImages()">
-			<input class="glow" type="text" placeholder="Enter Your Text" name="text" ng-model="create.search">
+			<input class="glow" type="text" placeholder="Enter Your Text" name="text" ng-model="create.search" autofocus>
 			<input type="submit" name="submit">
 		</form>
 	</div>
