--- a/public/index.html
+++ b/public/index.html
@@ -4,36 +4,16 @@
 	<meta charset="UTF-8">
 	<title>Share Your Secrets</title>
   <link rel="stylesheet" href="/css/main.css">
-	<script src="https://code.angularjs.org/1.5.5/angular.min.js"></script>
+	<base href="/">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+	<script src="https://code.angularjs.org/1.5.5/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/routes.js"></script>
 	<script src="js/creating.js"></script>
+	<script src="js/main.js"></script>
 </head>
-<body ng-controller="Creating as create">
-	<div class="form-wrapper">
-		<h3>Share Your Secrets</h3>
-		<form class="glow"  ng-submit="create.getImages()">
-			<input class="glow" type="text" placeholder="Enter Your Text" name="text" ng-model="create.search" autofocus>
-			<input type="submit" name="submit">
-		</form>
-	</div>
-	<div class="container">
-		<div class="preview-wrapper" ng-if="create.canPreview">
-			<img class="photo-overlay" ng-src="{{create.returnedImages[create.curr].full}}">
-			<img class="text-image" ng-src="{{create.transImg}}">
-		</div>
-		<div class="gallery-wrapper">
-			<div class="img-wrapper-wrapper">
-			<form class="radio-gallery" ng-submit="create.submitShout()">
-				<div class="img-wrapper" ng-repeat="(index, image) in create.returnedImages"  ng-class="{'selected' : index == create.curr}">
-					<input type="radio" name="gallery" value="{{index}}" id="thumb-{{index}}" ng-model="create.curr">
-					<label for="thumb-{{index}}"><img ng-src="{{image.thumb}}" class="gallery-item"></label>
-				</div>
-				<input type="submit" name="submit">
-			</form>
-		</div>
-		<div class="clearfix"></div>
-		</div>
-	</div>
+<body>
+	<ng-view></ng-view>
 </body>
 </html>
