create logo, update gitignore, create common folder in img directory, update styling

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
 	<script src="js/main.js"></script>
 </head>
 <body>
+	<div class="banner-wrapper">
+		<div class="banner">
+			<img src="/img/common/shout-in-the-dark.png" />
+		</div>
+	</div>
 	<ng-view></ng-view>
 </body>
 </html>
