Add links between pages

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
 <body>
 	<div class="banner-wrapper">
 		<div class="banner">
-			<img src="/img/common/shout-in-the-dark.png" />
+			<a href="/">
+				<img src="/img/common/shout-in-the-dark.png" />
+			</a>
 		</div>
 	</div>
 	<ng-view></ng-view>
