Add mobile-styled menu

--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,15 @@
 	<script src="js/main.js"></script>
 </head>
 <body>
-	<div class="banner-wrapper">
-		<div class="banner">
-			<a href="/">
-				<img src="/img/common/shout-in-the-dark.png" />
-			</a>
+		<div class="total-wrapper">
+		<div class="banner-wrapper">
+			<div class="banner">
+				<a href="/">
+					<img src="/img/common/shout-in-the-dark.png" />
+				</a>
+			</div>
 		</div>
+		<ng-view></ng-view>
 	</div>
-	<ng-view></ng-view>
 </body>
 </html>
