add meta viewport for mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="app">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Share Your Secrets</title>
   <link rel="stylesheet" href="/css/main.css">
 	<base href="/">
