Work out Canvas Implementation of Memify, write Angular service, figure out word wrapping

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 	<script src="js/routes.js"></script>
 	<script src="js/creating.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/textify.js"></script>	
 </head>
 <body>
 		<div class="total-wrapper">
