Added a scaler module to angular,  to scale the same on mobile devices

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
 	<script src="js/routes.js"></script>
 	<script src="js/creating.js"></script>
 	<script src="js/main.js"></script>
-	<script src="js/textify.js"></script>	
+	<script src="js/textify.js"></script>
+	<script src="js/scaler.js"></script>
 </head>
 <body>
 		<div class="total-wrapper">
